--- a/kubernetes-filebeat/templates/daemonset-master.yaml
+++ b/kubernetes-filebeat/templates/daemonset-master.yaml
@@ -37,10 +37,11 @@ spec:
           runAsUser: 0
         resources:
           limits:
-            memory: 200Mi
+            cpu: 500m
+            memory: 500Mi
           requests:
-            cpu: 100m
-            memory: 100Mi
+            cpu: 500m
+            memory: 500Mi
         volumeMounts:
         - name: config
           mountPath: /etc/filebeat.yml
@@ -51,6 +52,9 @@ spec:
         - name: varlog
           mountPath: /var/log/
           readOnly: true
+        - name: varlibdockercontainers
+          mountPath: /var/lib/docker/containers
+          readOnly: true
       volumes:
       - name: config
         configMap:
@@ -59,6 +63,9 @@ spec:
       - name: varlog
         hostPath:
           path: /var/log
+      - name: varlibdockercontainers
+        hostPath:
+          path: /var/lib/docker/containers
       - name: data
         hostPath:
           type: DirectoryOrCreate
