--- a/kubernetes-filebeat/Chart.yaml
+++ b/kubernetes-filebeat/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "6.2.1"
+appVersion: "6.2.3-snapshot"
 description: Filebeat log collector
 name: kubernetes-filebeat
-version: 0.4.0
+version: 0.4.1
