--- a/kubernetes-filebeat/values.yaml
+++ b/kubernetes-filebeat/values.yaml
@@ -1,8 +1,8 @@
 
 app:
   cluster_service: true
-  master_image:  docker.elastic.co/beats/filebeat:6.2.1
-  node_image: docker.elastic.co/beats/filebeat:6.2.1
+  master_image:  exekias/filebeat:6.2.3-snapshot
+  node_image: exekias/filebeat:6.2.3-snapshot
 
 loglevel: info
 
