--- a/clair/templates/secret.yaml
+++ b/clair/templates/secret.yaml
@@ -4,10 +4,10 @@ metadata:
   name: {{ template "clair.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    heritage: {{ .Release.Service | quote }}
-    release: {{ .Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    app: {{ template "clair.fullname" . }}
+    app.kubernetes.io/instance: {{ .Release.Name | quote }}
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    app.kubernetes.io/name: {{ template "clair.fullname" . }}
+    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
 type: Opaque
 data:
   config.yaml: |-
