--- a/clair/templates/deployment.yaml
+++ b/clair/templates/deployment.yaml
@@ -4,19 +4,19 @@ metadata:
   name: {{ template "clair.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    heritage: {{ .Release.Service | quote }}
-    release: {{ .Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    app: {{ template "clair.fullname" . }}
+    app.kubernetes.io/instance: {{ .Release.Name | quote }}
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    app.kubernetes.io/name: {{ template "clair.fullname" . }}
+    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ template "clair.fullname" . }}
+      app.kubernetes.io/name: {{ template "clair.fullname" . }}
   template:
     metadata:
       labels:
-        app: {{ template "clair.fullname" . }}
+        app.kubernetes.io/name: {{ template "clair.fullname" . }}
     spec:
       volumes:
       - name: "{{ .Chart.Name }}-config"
