--- a/clair/templates/service.yaml
+++ b/clair/templates/service.yaml
@@ -4,10 +4,10 @@ metadata:
   name: {{ template "clair.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    heritage: {{ .Release.Service | quote }}
-    release: {{ .Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    app: {{ template "clair.fullname" . }}
+    app.kubernetes.io/instance: {{ .Release.Name | quote }}
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    app.kubernetes.io/name: {{ template "clair.fullname" . }}
+    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -26,4 +26,4 @@ spec:
     nodePort: {{ .Values.service.healthNodePort }}
 {{- end }}
   selector:
-    app: {{ template "clair.fullname" . }}
+    app.kubernetes.io/name: {{ template "clair.fullname" . }}
