--- a/clair/templates/deployment.yaml
+++ b/clair/templates/deployment.yaml
@@ -16,8 +16,11 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ template "clair.fullname" . }}
-        {{ template "postgres.fullname" . }}-client: "true"
+        app.kubernetes.io/instance: {{ .Release.Name | quote }}
+         helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+         app.kubernetes.io/name: {{ template "clair.fullname" . }}
+         app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
+         {{ template "postgres.fullname" . }}-client: "true"
     spec:
       volumes:
       - name: "{{ .Chart.Name }}-config"
