--- a/clair/templates/deployment.yaml
+++ b/clair/templates/deployment.yaml
@@ -16,7 +16,10 @@ spec:
   template:
     metadata:
       labels:
+        app.kubernetes.io/instance: {{ .Release.Name | quote }}
+        helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
         app.kubernetes.io/name: {{ template "clair.fullname" . }}
+        app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
         {{ template "postgres.fullname" . }}-client: "true"
     spec:
       volumes:
