--- a/postgres/templates/statefulset.yaml
+++ b/postgres/templates/statefulset.yaml
@@ -1,6 +1,6 @@
 {{- $defaultSecretName := printf "%s-secret" .Release.Name }}
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ template "postgres.fullname" . }}
