--- a/redis/templates/statefulset.yaml
+++ b/redis/templates/statefulset.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ template "redis.fullname" . }}
@@ -11,6 +11,9 @@ metadata:
 spec:
   serviceName: {{ template "redis.fullname" . }}
   replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      app: {{ template "redis.fullname" . }}
   template:
     metadata:
         {{- if not .Values.datadog.enabled }}
