--- a/security-monkey/templates/config-map.yaml
+++ b/security-monkey/templates/config-map.yaml
@@ -468,7 +468,7 @@ data:
             'file': {
                 # 'class': 'logging.handlers.RotatingFileHandler',
                 'class': 'logging.handlers.GroupWriteRotatingFileHandler',
-                'level': 'DEBUG',
+                'level': 'INFO',
                 'formatter': 'standard',
                 'filename': '/var/log/security_monkey/securitymonkey.log',
                 'maxBytes': 10485760,
@@ -477,7 +477,7 @@ data:
             },
             'console': {
                 'class': 'logging.StreamHandler',
-                'level': 'DEBUG',
+                'level': 'INFO',
                 'formatter': 'standard',
                 'stream': 'ext://sys.stdout'
             }
@@ -485,7 +485,7 @@ data:
         'loggers': {
             'security_monkey': {
                 'handlers': ['console'],
-                'level': os.getenv('SM_CONSOLE_LOG_LEVEL', 'DEBUG')
+                'level': os.getenv('SM_CONSOLE_LOG_LEVEL', 'INFO')
             },
             'apscheduler': {
                 'handlers': ['console'],
@@ -609,7 +609,7 @@ data:
         "strict": True,
 
         # Enable debug mode (outputs errors).
-        "debug": True,
+        "debug": False,
 
         # Service Provider Data that we are deploying.
         "sp": {
