--- a/csp-handler/values.yaml
+++ b/csp-handler/values.yaml
@@ -11,8 +11,8 @@ service:
 
 ingress:
   enabled: false
+  className: nginx-public
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   path: /
   hosts:
